--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     content="Realtime Nest application."
     key="ogdesc"
   />
-  <title>Nest realtime</title>
+  <title>PowerChat</title>
   <head> </head>
   <body>
     <div id="root"></div>
